--- a/kinomart/user/templates/user/success.html
+++ b/kinomart/user/templates/user/success.html
@@ -41,7 +41,7 @@
         </h4>
             {% if discount != 0 %}
 
-        <p>
+        <p style="margin-left: 20px;">
             You have saved ₹{{discount}} on this order!!
         </p>
             {% endif %}
