--- a/kinomart/user/templates/user/theme.html
+++ b/kinomart/user/templates/user/theme.html
@@ -90,9 +90,9 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <input type="search" class="form-control" id="search_bar" style="width: 350px; display: none;">
-                        <div class="d-flex m-3 me-0">
-                            <button id="btn-search" class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"  ><i class="fas fa-search text-primary"></i></button>
+                        {% block search %}
+
+                        {% endblock %}
                             <a href="{% url 'cart' %}" class="position-relative me-4 my-auto">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
                                 <span class="cart-count position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;" ></span>
