--- a/kinomart/kinomart/templates/adm_temp_files/css/styles.css
+++ b/kinomart/kinomart/templates/adm_temp_files/css/styles.css
@@ -10,6 +10,11 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.holded{
+  background-color: #f8d7da !important; 
+}
+
+
  .dropdown-submenu {
   position: relative;
 }
