--- a/kinomart/user/templates/user/index.html
+++ b/kinomart/user/templates/user/index.html
@@ -1,7 +1,14 @@
 {% extends 'user/theme.html' %}
 {% load static %}
 {% block title %}Home{% endblock %}
-{% block content %}
+
+{% block search %}
+<input type="search" class="form-control" id="search_bar" style="width: 350px; display: none;">
+                        <div class="d-flex m-3 me-0">
+                            <button id="btn-search" class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"  ><i class="fas fa-search text-primary"></i></button>
+{% endblock %}
+
+                            {% block content %}
 
 
         <!-- Hero Start -->
