--- a/kinomart/user/templates/user/success.html
+++ b/kinomart/user/templates/user/success.html
@@ -46,7 +46,7 @@
         </p>
             {% endif %}
     </div>
-       <a href="{% url 'home' %}"> <img style="width: 85%;" src="{% static 'img/order.jpg' %}" alt="Order Placed"></a>
+       <a href="{% url 'order_history' %}"> <img style="width: 85%;" src="{% static 'img/order.jpg' %}" alt="Order Placed"></a>
     
     
 
