Refferal offer added

--- a/kinomart/user/templates/user/signup.html
+++ b/kinomart/user/templates/user/signup.html
@@ -83,6 +83,11 @@
           <label for="pin" class="form-label">PIN</label>
           <input type="text" class="form-control" name="pin" id="pin">
         </div>
+
+        <div class="mb-1">
+          <label for="pin" class="form-label">Refferal Code</label>
+          <input type="text" class="form-control" name="refferal_code" id="refferal_code" placeholder="Optional">
+        </div>
        
             
          
