--- a/kinomart/user/templates/user/user_address.html
+++ b/kinomart/user/templates/user/user_address.html
@@ -29,7 +29,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar -->
-        <div class="col-md-2 bg-light p-4 ms-4 rounded shadow" style="height: 60vh;">
+        <div class="col-md-2 bg-light p-4 ms-4 rounded shadow" style="height: 400px;">
           <h4>Hello {{user.first_name}}</h4>
             <ul class="list-group">
               <a href="{% url 'user_page' %}"><li class="list-group-item rounded-4">Profile</li></a>
