--- a/kinomart/user/templates/user/theme.html
+++ b/kinomart/user/templates/user/theme.html
@@ -93,11 +93,17 @@
                         {% block search %}
 
                         {% endblock %}
-                            <a href="{% url 'cart' %}" class="position-relative me-4 my-auto">
+                            <a href="{% url 'cart' %}" class="position-relative me-4 my-auto" title="Cart">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
                                 <span class="cart-count position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;" ></span>
                             </a>
-                            <a href="{% url 'user_page' %}" class="my-auto">
+
+                            <a href="{% url 'wishlist' %}" class="position-relative me-4 my-auto" title="Wishlist">
+                                <i class="fa-solid fa-heart fa-2x"></i>
+                                
+                            </a>
+
+                            <a href="{% url 'user_page' %}" class="my-auto" title="Profile">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
                         </div>
