--- a/kinomart/user/templates/user/view_product.html
+++ b/kinomart/user/templates/user/view_product.html
@@ -129,6 +129,13 @@
                                 <a href="" data-product-id="{{product.id}}" class="btn border border-secondary rounded-pill px-3 py-1 mb-4 text-primary add-to-cart">
                                     <i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart
                                 </a>
+                                {% if is_wishlist %}
+                                <button data-product-id="{{product.id}}" class="btn border border-secondary rounded-pill px-3 text-primary remove-from-whishlist"><i class="fa-solid fa-heart"></i></button>
+                                
+
+                                {% else %}
+                                <button data-product-id="{{product.id}}" class="btn border border-secondary rounded-pill px-3 text-primary add-to-wishlist"><i class="fa-regular fa-heart"></i></button>
+                                {% endif %}
                                 
                             </div>
 
@@ -614,6 +621,76 @@
        {% block scripts %}
 <script>
    $(document).ready(function() {
+
+// remove from wishlist
+$('.remove-from-whishlist').click(function(e){
+    e.preventDefault();
+    var productId = $(this).data("product-id");
+    var thisElement= $(this);
+    console.log("ID",productId);
+
+
+    $.ajax({
+            url: "{% url 'remove_from_wishlist' %}",
+            type: "POST",
+            data: {
+                productId: productId,
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+            },
+            success: function(response) {
+        if(response.error === 'login_required') {
+            window.location.href = "{% url 'login_user' %}";
+        } else if(response.message) {
+            alert(response.message);
+            thisElement.replaceWith('<a href="" data-product-id="{{product.product_id}}" class="btn border border-secondary rounded-pill px-3 text-primary add-to-wishlist"><i class="fa-regular fa-heart"></i></a>');
+
+        }
+    }
+        });
+
+
+
+})
+
+
+
+// add to wishlist 
+$(".add-to-wishlist").click(function(e) {
+        e.preventDefault();
+
+
+
+        // Get the id of the currently active variant
+        var productId = $(this).data("product-id");
+        console.log("ID",productId);
+
+        var thisElement= $(this);
+
+        // AJAX request to add to cart
+        $.ajax({
+            url: "{% url 'add_to_wishlist' %}",
+            type: "POST",
+            data: {
+                productId: productId,
+                csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
+            },
+            success: function(response) {
+        if(response.error === 'login_required') {
+            window.location.href = "{% url 'login_user' %}";
+        } else if(response.message) {
+            alert(response.message);
+            thisElement.replaceWith('<a href="" data-product-id="{{product.product_id}}" class="btn border border-secondary rounded-pill px-3 text-primary remove-from-whishlist"><i class="fa-solid fa-heart"></i></a>');
+
+        }
+    }
+        });
+    });
+
+
+
+
+
+
     $(".add-to-cart").click(function(e) {
         e.preventDefault();
 
