--- a/kinomart/admin/templates/admin/sales_report_page.html
+++ b/kinomart/admin/templates/admin/sales_report_page.html
@@ -31,13 +31,21 @@
       
     <div class="card-body" id="result">
         <h3 style="text-align: center;">Overall Sales Report</h3>
-        <a href="{% url 'sales_report_all' %}">Download CSV</a><br>
-        <a href="{% url 'sales_report_all_pdf' %}">Download PDF</a>
+      
         <hr>
-        <p><strong>Sales count:</strong> {{ orders.count }}</p>
-<p><strong>Order amount:</strong> ₹{{ total_order_amount }}</p>
-<p><strong>Sales discount:</strong> ₹{{ total_discount }}</p>
+        <div class="row">
+            <div class="col-md-10">
+                <p><strong>Sales count:</strong> {{ orders.count }}</p>
+                <p><strong>Order amount:</strong> ₹{{ total_order_amount }}</p>
+                <p><strong>Sales discount:</strong> ₹{{ total_discount }}</p>
 
+            </div>
+            <div class="col-md-2 text-success">
+                <a class="btn " title="Download as .csv file" href="{% url 'sales_report_all' %}"><i class="fa-solid fa-download fa-lg"></i> <i class="fa-solid fa-file-csv fa-lg"></i></a><br>
+                <a class="btn" title="Download as .pdf file" href="{% url 'sales_report_all_pdf' %}"><i class="fa-solid fa-download fa-lg"></i> <i class="fa-solid fa-file-pdf fa-lg"></i></a>
+                
+            </div>
+        </div>
         <hr>
         <table id="datatablesSimple">
             <thead>
